--- a/UI/src/app/core/header/header-mobile/header-mobile.component.css
+++ b/UI/src/app/core/header/header-mobile/header-mobile.component.css
@@ -2,11 +2,12 @@
   display: flex;
   flex-direction: row;
   border: 1px solid #ccc;
-  align-items: center;
+  align-items: flex-end;
   padding-left: 0.5em;
   padding-right: 0.5em;
   gap: 2em;
   height: 60px;
+  padding-bottom: 8px;
 }
 
 img {
@@ -14,24 +15,27 @@ img {
 }
 
 .toogle-menu {
-  display: inline-block;
-  width: 35px;
+  display: flex;
+  align-items: flex-end;
+  width: 30px;
+  padding-bottom: 0px;
 }
 
 .toogle-menu fa-icon {
-  font-size: 30px;
+  font-size: 33px;
   font-weight: 600;
   color: #1e5375;
   cursor: pointer;
+  display: flex;
+  align-items: flex-end;
+  line-height: 1;
 }
-
 .logo {
   flex: 1 1 120px;
   width: fit-content;
-}
-
-.logo {
   cursor: pointer;
+  display: flex;
+  align-items: flex-end;
 }
 
 .search {
@@ -91,14 +95,17 @@ ul li {
 }
 
 ul li a {
-  display: block;
+  display: flex;
   text-align: center;
+  align-items: center;
+  gap: 0.5em;
   color: #22648d;
-  font-size: 18px;
+  font-size: 16px;
   text-align: left;
   text-decoration: none;
   cursor: pointer;
   margin: 5px;
+  width: 100%;
 }
 
 ul li:hover {
@@ -119,7 +126,7 @@ ul li fa-icon,
 
 .drawer-header {
   background-color: white;
-  font-size: 18px;
+  font-size: 16px;
   border-bottom: 1px solid #b0b5b5;
   display: flex;
   align-items: center;
